# multiscale-route-hypothesis-platform

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: acidithiobacillus_fe.yaml  ecoli_fucose.yaml  shewanella_db.yaml  shewanella_mo.yaml  shewanella_rc.yaml  shewanella_rc_gentisate.yaml
docs/: architecture.md  cli_reference.md  configuration.md  frozen_models.md
examples/gems/: README.md
scripts/: run_demo_all.py  validate_repo.py
src/mrhp/: __init__.py  cli.py
src/mrhp/bridge/: __init__.py  engine.py
src/mrhp/config/: loader.py
src/mrhp/core/: __init__.py  pipeline.py
src/mrhp/examples/: __init__.py
src/mrhp/expression/: __init__.py  simulator.py
src/mrhp/integration/: __init__.py  omics.py
src/mrhp/io/: __init__.py  writers.py
src/mrhp/models/: __init__.py  frozen.py
src/mrhp/plotting/: __init__.py  figures.py
src/mrhp/reporting/: __init__.py  markdown.py
src/mrhp/scoring/: __init__.py  scorer.py
src/mrhp/simulation/: __init__.py  ode_solver.py  route_builder.py
src/mrhp/skill_mode/: __init__.py  hooks.py
templates/: config_full.yaml  config_minimal.yaml
tests/integration/: test_imports.py  test_pipeline.py
tests/unit/: test_bridge.py  test_config.py  test_frozen.py  test_ode.py  test_route.py  test_scoring.py
